--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
         background-color: #121212;
         color: #e0e0e0;
         font-family: "Roboto", sans-serif;
+        height: 100%;
+        width: 100%;
       }
 
       h1,
